--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "next": "12.1.5",
@@ -14,11 +15,14 @@
     "react-dom": "18.0.0"
   },
   "devDependencies": {
+    "@types/jest": "^27.4.1",
     "@types/node": "17.0.25",
     "@types/react": "18.0.5",
     "@types/react-dom": "18.0.1",
     "eslint": "8.13.0",
     "eslint-config-next": "12.1.5",
+    "jest": "^27.5.1",
+    "ts-jest": "^27.1.4",
     "typescript": "4.6.3"
   }
 }
