--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,9 @@
 {
-  "extends": ["next/core-web-vitals", "airbnb-typescript"],
+  "extends": [
+    "next/core-web-vitals",
+    "airbnb-typescript",
+    "plugin:prettier/recommended"
+  ],
   "parserOptions": {
     "project": "./tsconfig.json"
   }
