--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "eslint": "8.13.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-next": "12.1.5",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.5.1",
+    "prettier": "^2.6.2",
     "ts-jest": "^27.1.4",
     "typescript": "4.6.3"
   }
