--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "fix": "eslint --fix .",
+    "fix": "eslint --fix **/*.ts **/*.tsx",
     "test": "jest"
   },
   "dependencies": {
