--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.0",
     "next": "12.1.5",
     "react": "18.0.0",
     "react-dom": "18.0.0"
   },
   "devDependencies": {
+    "@emotion/babel-plugin": "^11.9.2",
     "@types/jest": "^27.4.1",
     "@types/node": "17.0.25",
     "@types/react": "18.0.5",
