--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@emotion/react": "^11.9.0",
     "next": "12.1.5",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "recoil": "^0.7.2"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.9.2",
