--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@emotion/react": "^11.9.0",
+    "axios": "^0.26.1",
     "next": "12.1.5",
     "react": "18.0.0",
     "react-dom": "18.0.0",
